@@ -1,3 +1,8 @@
+Tue Jun 30 10:28:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/schema.py: Add support for spell correction in
+	  xappy schema.  Reorganise a bit to be neater.
+
 Tue Jun 30 04:40:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/queries.py: Add Query.filter() method.
